[workspace]
members = [
    ".",
    "libxcp",
    "libfs",
]
default-members = [".", "libfs"]
resolver = "2"

[package]
name = "xcp"
description = "xcp is a (partial) clone of the Unix `cp` command, with more user-friendly feedback and some performance optimisations. See the README for features and limitations."
version = "0.21.1"
edition = "2021"
rust-version = "1.75.0"

authors = ["Steve Smith <tarkasteve@gmail.com>"]
homepage = "https://github.com/tarka/xcp"
repository = "https://github.com/tarka/xcp"
readme = "README.md"

keywords = ["coreutils", "cp", "files", "filesystem"]
categories =["command-line-utilities"]
license = "GPL-3.0-only"

[features]
default = ["parblock", "use_linux"]
parblock = ["libxcp/parblock"]
use_linux = ["libfs/use_linux", "libxcp/use_linux"]
# For CI; disable feature testing on filesystems that don't support
# it. See .github/workflows/tests.yml
test_no_reflink = ["libfs/test_no_reflink"]
test_no_sparse = ["libfs/test_no_sparse"]
test_no_extents = ["libfs/test_no_extents"]
test_no_sockets = ["libfs/test_no_sockets"]
test_no_acl = ["libfs/test_no_acl"]
test_no_xattr = []
test_no_symlinks = []
test_no_perms = []
test_run_expensive = []

[dependencies]
anyhow = "1.0.86"
crossbeam-channel = "0.5.13"
clap = { version = "4.5.7", features = ["derive"] }
glob = "0.3.1"
ignore = "0.4.22"
indicatif = "0.17.8"
libfs = { version = "0.7.2", path = "libfs" }
libxcp = { version = "0.22.0", path = "libxcp" }
log = "0.4.21"
num_cpus = "1.16.0"
simplelog = "0.12.2"
unbytify = "0.2.0"

[dev-dependencies]
cfg-if = "1.0.0"
fslock = "0.2.1"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xorshift = "0.3.0"
rustix = "0.38.34"
tempfile = "3.10.1"
test-case = "3.3.1"
uuid = { version = "1.9.1", features = ["v4"] }
walkdir = "2.5.0"
xattr = "1.3.1"

[lints.clippy]
upper_case_acronyms = "allow"
