[workspace]
members = [
    ".",
    "libxcp",
    "libfs",
]
default-members = [".", "libfs"]
resolver = "2"

[package]
name = "xcp"
description = "xcp is a (partial) clone of the Unix `cp` command, with more user-friendly feedback and some performance optimisations. See the README for features and limitations."
version = "0.24.1"
edition = "2021"
rust-version = "1.82.0"

authors = ["Steve Smith <tarkasteve@gmail.com>"]
homepage = "https://github.com/tarka/xcp"
repository = "https://github.com/tarka/xcp"
readme = "README.md"

keywords = ["coreutils", "cp", "files", "filesystem"]
categories =["command-line-utilities"]
license = "GPL-3.0-only"

[features]
default = ["parblock", "use_linux"]
parblock = ["libxcp/parblock"]
use_linux = ["libfs/use_linux", "libxcp/use_linux"]
# For CI; disable feature testing on filesystems that don't support
# it. See .github/workflows/tests.yml
test_no_reflink = ["libfs/test_no_reflink"]
test_no_sparse = ["libfs/test_no_sparse"]
test_no_extents = ["libfs/test_no_extents"]
test_no_sockets = ["libfs/test_no_sockets"]
test_no_acl = ["libfs/test_no_acl"]
test_no_xattr = []
test_no_symlinks = []
test_no_perms = []
test_run_expensive = []

[dependencies]
anyhow = "1.0.98"
crossbeam-channel = "0.5.15"
clap = { version = "4.5.40", features = ["derive"] }
glob = "0.3.2"
ignore = "0.4.23"
indicatif = "0.17.11"
libfs = { version = "0.9.1", path = "libfs" }
libxcp = { version = "0.24.1", path = "libxcp" }
log = "0.4.27"
num_cpus = "1.17.0"
simplelog = "0.12.2"
unbytify = "0.2.0"
terminal_size = "0.4.2"

[dev-dependencies]
cfg-if = "1.0.1"
fslock = "0.2.1"
rand = "0.9.1"
rand_distr = "0.5.1"
rand_xorshift = "0.4.0"
rustix = "1.0.7"
tempfile = "3.20.0"
test-case = "3.3.1"
uuid = { version = "1.17.0", features = ["v4"] }
walkdir = "2.5.0"
xattr = "1.5.1"

[lints.clippy]
upper_case_acronyms = "allow"
