[package]
name = "libfs"
description = "`libfs` is a library of file and filesystem operations that is supplementary to `std::fs`"
version = "0.9.0"
edition = "2021"

authors = ["Steve Smith <tarkasteve@gmail.com>"]
homepage = "https://github.com/tarka/xcp/libfs"
repository = "https://github.com/tarka/xcp/libfs"
readme = "README.md"

keywords = ["coreutils", "files", "filesystem", "sparse"]
categories =["filesystem"]
license = "GPL-3.0-only"

[features]
default = ["use_linux"]
use_linux = []
# For CI; disable feature testing on filesystems that don't support
# it. See .github/workflows/tests.yml
test_no_acl = []
test_no_reflink = []
test_no_sparse = []
test_no_extents = []
test_no_sockets = []

[dependencies]
cfg-if = "1.0.0"
libc = "0.2.171"
linux-raw-sys = { version = "0.9.3", features = ["ioctl"] }
log = "0.4.27"
rustix = { version = "1.0.3", features = ["fs"] }
thiserror = "2.0.12"
xattr = "1.5.0"

[dev-dependencies]
exacl = "0.12.0"
tempfile = "3.19.1"

[lints.clippy]
upper_case_acronyms = "allow"
