[package]
name = "libfs"
description = "`libfs` is a library of file and filesystem operations that is supplementary to `std::fs`"
version = "0.9.1"
edition = "2024"
rust-version = "1.88.0"

authors = ["Steve Smith <tarkasteve@gmail.com>"]
homepage = "https://github.com/tarka/xcp/libfs"
repository = "https://github.com/tarka/xcp/libfs"
readme = "README.md"

keywords = ["coreutils", "files", "filesystem", "sparse"]
categories =["filesystem"]
license = "GPL-3.0-only"

[features]
default = ["use_linux"]
use_linux = []
# For CI; disable feature testing on filesystems that don't support
# it. See .github/workflows/tests.yml
test_no_acl = []
test_no_reflink = []
test_no_sparse = []
test_no_extents = []
test_no_sockets = []

[dependencies]
cfg-if = "1.0.1"
libc = "0.2.174"
linux-raw-sys = { version = "0.9.4", features = ["ioctl"] }
log = "0.4.27"
rustix = { version = "1.0.7", features = ["fs"] }
thiserror = "2.0.12"
xattr = "1.5.1"

[dev-dependencies]
exacl = "0.12.0"
tempfile = "3.20.0"

[lints.clippy]
upper_case_acronyms = "allow"
