[package]
name = "libxcp"
description = "`libxcp` is a high-level file-copy engine with support for multi-threading, fine-grained progress feedback, pluggable drivers, and `.gitignore` filters. `libxcp` provides the core functionality of `xcp`."
version = "0.22.0"
edition = "2021"
rust-version = "1.75.0"

authors = ["Steve Smith <tarkasteve@gmail.com>"]
homepage = "https://github.com/tarka/xcp"
repository = "https://github.com/tarka/xcp"
readme = "README.md"

keywords = ["coreutils", "cp", "files", "filesystem"]
categories =["filesystem"]
license = "GPL-3.0-only"

[features]
default = ["parblock", "use_linux"]
parblock = []
use_linux = ["libfs/use_linux"]

[dependencies]
anyhow = "1.0.86"
blocking-threadpool = "1.0.1"
cfg-if = "1.0.0"
crossbeam-channel = "0.5.13"
ignore = "0.4.22"
libfs = { version = "0.7.2", path = "../libfs" }
log = "0.4.21"
num_cpus = "1.16.0"
regex = "1.10.5"
thiserror = "1.0.61"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.10.1"

[lints.clippy]
upper_case_acronyms = "allow"
