[package]
name = "libxcp"
description = "`libxcp` is a high-level file-copy engine with support for multi-threading, fine-grained progress feedback, pluggable drivers, and `.gitignore` filters. `libxcp` provides the core functionality of `xcp`."
version = "0.24.3"
edition = "2024"
rust-version = "1.88.0"

authors = ["Steve Smith <tarkasteve@gmail.com>"]
homepage = "https://github.com/tarka/xcp"
repository = "https://github.com/tarka/xcp"
readme = "README.md"

keywords = ["coreutils", "cp", "files", "filesystem"]
categories =["filesystem"]
license = "GPL-3.0-only"

[features]
default = ["parblock", "use_linux"]
parblock = []
use_linux = ["libfs/use_linux"]

[dependencies]
anyhow = "1.0.101"
blocking-threadpool = "1.0.3"
cfg-if = "1.0.4"
crossbeam-channel = "0.5.15"
ignore = "0.4.25"
libfs = { version = "0.9.3", path = "../libfs" }
log = "0.4.29"
num_cpus = "1.17.0"
regex = "1.12.3"
thiserror = "2.0.18"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.24.0"

[lints.clippy]
upper_case_acronyms = "allow"
