[package]
name = "xcp"
description = "xcp is an experimental and incomplete clone of the Unix `cp` command, with more user-friendly feedback and some performance optimisations. NOTE: See the README for current limitations."
version = "0.16.0"
edition = "2021"
rust-version = "1.70.0"

authors = ["Steve Smith <tarkasteve@gmail.com>"]
homepage = "https://github.com/tarka/xcp"
repository = "https://github.com/tarka/xcp"
readme = "README.md"

keywords = ["coreutils", "cp", "files", "filesystem"]
categories =["command-line-utilities"]
license = "GPL-3.0-only"

[features]
default = ["parblock", "use_linux"]
parblock = []
use_linux = ["libxcp/use_linux"]
# For CI; disable feature testing on filesystems that don't support
# it. See .github/workflows/tests.yml
test_no_reflink = ["libxcp/test_no_reflink"]
test_no_sparse = ["libxcp/test_no_sparse"]
test_no_extents = ["libxcp/test_no_extents"]
test_no_sockets = ["libxcp/test_no_sockets"]
test_no_xattr = []
test_no_symlinks = []
test_run_expensive = []

[dependencies]
cfg-if = "1.0.0"
libfs = { version = "0.5.0", path = "../libfs" }
libxcp = { version = "0.0.1", path = "../libxcp" }
log = "0.4.20"
simplelog = "0.12.1"

[dev-dependencies]
anyhow = "1.0.75"
fslock = "0.2.1"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xorshift = "0.3.0"
tempfile = "3.8.1"
test-case = "3.3.1"
walkdir = "2.4.0"
xattr = "1.1.3"

[build-dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
clap_complete = "4.4.4"
clap_mangen = "0.2.15"
libxcp = { version = "0.0.1", path = "../libxcp" }

[lints.clippy]
upper_case_acronyms = "allow"
